--- a/app/views/dashboard/agency.html.erb
+++ b/app/views/dashboard/agency.html.erb
@@ -49,7 +49,7 @@
                       <dl>
                         <dt class="truncate text-sm font-medium text-gray-500">Appointments Scheduled</dt>
                         <dd>
-                          <div class="text-lg font-medium text-gray-900"><%= @appointments.count %></div>
+                          <div class="text-lg font-medium text-gray-900"><%= @appointments.where(current_status: "scheduled").count %></div>
                         </dd>
                       </dl>
                     </div>
@@ -75,7 +75,7 @@
                       <dl>
                         <dt class="truncate text-sm font-medium text-gray-500">Appointments Completed</dt>
                         <dd>
-                          <div class="text-lg font-medium text-gray-900"><%= @appointments.count %></div>
+                          <div class="text-lg font-medium text-gray-900"><%= @appointments.where(current_status: "completed").count %></div>
                         </dd>
                       </dl>
                     </div>
