--- a/app/views/agencies/index.html.erb
+++ b/app/views/agencies/index.html.erb
@@ -32,8 +32,8 @@
                         <table class="min-w-full divide-y divide-gray-300">
                           <thead class="bg-gray-50">
                             <tr>
-                              <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6"><%= sortable @sites, :name, "Name" %></th>
-                              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900"><%= sortable @sites, :primary_contact_email, "Primary Contact" %></th>
+                              <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6"><%= sortable @agencies, :name, "Name" %></th>
+                              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900"><%= sortable @agencies, :primary_contact_email, "Primary Contact" %></th>
                               <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
                                 <span class="sr-only">View</span>
                               </th>
